Fix grid not aligning 16x16

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,12 @@
     width: 960px;
 }
 
+.grid>div:nth-child(16n + 1){
+    width: 100%;
+    border: 0;
+    height: 0;
+}
+
 .grid{
     display: flex;
     flex-direction: row;
